crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__tstring_escaped_newline.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
Suite {
    range: 0..8,
    node_index: NodeIndex(None),
    statements: [
        Expr(
            StmtExpr {
                node_index: NodeIndex(None),
                range: 0..8,
                value: TString(
                    ExprTString {
                        node_index: NodeIndex(None),
                        range: 0..8,
                        value: TStringValue {
                            inner: Single(
                                TString {
                                    range: 0..8,
                                    node_index: NodeIndex(None),
                                    elements: [
                                        Literal(
                                            InterpolatedStringLiteralElement {
                                                range: 2..4,
                                                node_index: NodeIndex(None),
                                                value: "\n",
                                            },
                                        ),
                                        Interpolation(
                                            InterpolatedElement {
                                                range: 4..7,
                                                node_index: NodeIndex(None),
                                                expression: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 5..6,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                    flags: TStringFlags {
                                        quote_style: Double,
                                        prefix: Regular,
                                        triple_quoted: false,
                                        unclosed: false,
                                    },
                                },
                            ),
                        },
                    },
                ),
            },
        ),
    ],
}
