crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__tstring_line_continuation.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
Suite {
    range: 0..9,
    node_index: NodeIndex(None),
    statements: [
        Expr(
            StmtExpr {
                node_index: NodeIndex(None),
                range: 0..9,
                value: TString(
                    ExprTString {
                        node_index: NodeIndex(None),
                        range: 0..9,
                        value: TStringValue {
                            inner: Single(
                                TString {
                                    range: 0..9,
                                    node_index: NodeIndex(None),
                                    elements: [
                                        Literal(
                                            InterpolatedStringLiteralElement {
                                                range: 3..5,
                                                node_index: NodeIndex(None),
                                                value: "\\\n",
                                            },
                                        ),
                                        Interpolation(
                                            InterpolatedElement {
                                                range: 5..8,
                                                node_index: NodeIndex(None),
                                                expression: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 6..7,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                    flags: TStringFlags {
                                        quote_style: Double,
                                        prefix: Raw {
                                            uppercase_r: false,
                                        },
                                        triple_quoted: false,
                                        unclosed: false,
                                    },
                                },
                            ),
                        },
                    },
                ),
            },
        ),
    ],
}
